feat: add cotani-teleport module and fix task/scheduler logic
- Introduce cotani-teleport: async-aware, thread-safe teleport API
- Rewrite PaperTeleportService to dispatch Bukkit operations on correct threads
- Make SafeLocationResolver async and skip unloaded chunks to avoid lag spikes
- Dispatch Bukkit events through scheduler-aware TeleportEventBus
- Add cooldown duration to TeleportOptions and apply on successful teleport
- Apply PlayerSettings (dismount, closeInventory, preserveVelocity) safely
- Store TeleportCancelReason in PendingTeleportStateMachine
- Use injected Clock in TeleportEventNotifier for consistent timing
- Fix debounce race condition in ModernPaperTaskScheduler
- Update README with teleport module and usage examples